--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 .header-logo {
-  padding-top: 10px;
+  padding-top: 20px;
   right: 45px;
   position: relative;
    &::before {
@@ -10,7 +10,7 @@
      width: 2px;
      height: 20px;
      bottom: 12px;
-     right: 153px;
+     right: 7.9%;
      transform: rotate(45deg);
    }
   &::after {
@@ -21,7 +21,7 @@
     width: 20px;
     height: 2px;
     bottom: 21px;
-    right: 144px;
+    right: 6.4%;
     transform: rotate(45deg);
   }
 }
@@ -40,6 +40,7 @@
 
 @media only screen and (min-width: 768px) {
   .header__inner {
+    margin: 0 20px 0 20px;
     display: flex;
     justify-content: space-between;
   }
@@ -55,7 +56,7 @@
       width: 0px;
       height: 0px;
       bottom: 12px;
-      right: 153px;
+      right: 8%;
       transform: rotate(45deg);
     }
     &::after {
@@ -66,7 +67,7 @@
       width: 0px;
       height: 0px;
       bottom: 21px;
-      right: 144px;
+      right: 8%;
       transform: rotate(45deg);
     }
 
