--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -49,7 +49,7 @@
 }
 .slimming__title {
   display: flex;
-  margin: 24px 0 24px 22px;
+  padding: 24px 0 24px 22px;
 }
 .slimming__title--text {
   padding-top: 5px;
@@ -198,12 +198,18 @@
 }
 
 .example__expenses {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   text-align: center;
   padding-top: 22px;
   padding-bottom: 44px;
   font-size: 14px;
   line-height: 1.43;
   color: #111;
+}
+.example__expenses--price {
+  padding-left: 10px;
 }
 .example__img {
   width: 311px;
@@ -254,16 +260,767 @@
   line-height: 1.43;
   color: #444;
 }
-.address__img {
+.address__map--img {
   width: 100%;
+}
+.address__map {
+  text-align: center;
   position: relative;
   &::before {
     content: url("../img/map-pin.png");
     position: absolute;
     width: 55px;
     height: 53px;
-    top: 0;
+    top: 48%;
+    left: 45%;
+    z-index: 3;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .cat-program {
+    display: flex;
+    flex-direction: column;
+    background: none;
+    padding-bottom: 0;
+    max-width: 768px;
+  }
+  .cat-program__item {
+    padding-top: 29px;
+    padding-bottom: 19px;
+    padding-right: 300px;
+    font-size: 36px;
+    line-height: 1;
+    color: #111;
+  }
+  .cat-program__text {
+    padding-right: 300px;
+    color: #111;
+    font-size: 20px;
+    line-height: 1;
+    padding-bottom: 29px;
+  }
+  .cat-program__btn {
+    font-size: 14px;
+    line-height: 1.29;
+    padding: 17px 29px 17px 29px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    background-color: #68b738;
+    color: #fff;
+    text-transform: uppercase;
+    margin: 0 435px 0 114px;
+    position: relative;
+    bottom: 500px;
+    max-width: 245px;
+  }
+  .cat-program__img {
+    z-index: -1;
+    width: 609px;
+    height: 509px;
+    margin: 0 auto;
+    padding-top: 25px;
+  }
+
+  .slimming {
+    background-color: #f2f2f2;
+    margin: 0 30px 30px 30px;
+    position: relative;
+  }
+  .slimming__title {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin: 81px 0 0 30px;
+  }
+  .slimming__title--text {
+    padding-top: 0;
+    padding-left: 0;
+    font-size: 36px;
+    line-height: 1.03;
+    color: #111111;
+  }
+  .slimming__title--img {
+    width: 260px;
+    height: 200px;
+    padding-right: 26px;
+  }
+  .slimming__title--img2 {
+    width: 288px;
+    height: 200px;
+    padding-right: 26px;
+  }
+  .slimming__text {
+    position: absolute;
+    top: 130px;
+    width: 50%;
+    margin: 0 22px 23px 52px;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #444;
+    padding-bottom: 23px;
+    border-bottom: none;
+  }
+  .slimming__btn {
+    margin: 20px 0 0 52px;
+    padding-bottom: 62px;
+  }
+  .slimming__btn--link {
+    padding-right: 12px;
+    font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1;
+    color: #111;
+    text-transform: uppercase;
+  }
+  .slimming__btn--arrow {
+    width: 24px;
+    height: 11px;
+    margin-bottom: 3px;
+  }
+
+  .advantage {
+    margin: 12px 27px 47px 22px;
+  }
+  .advantage__title {
+    font-size: 36px;
+    line-height: 1.67;
+    color: #111;
+    padding-bottom: 40px;
+    margin-left: 7px;
+  }
+  .advantage__list {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .list-description {
+    display: flex;
+    flex-direction: column;
+    max-width: 50%;
+    font-size: 14px;
+    line-height: 1.29;
+    color: #444;
+    padding-bottom: 167px;
+    position: relative;
+    &:after {
+      content: '';
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      background-color: #68b738;
+      left: 10px;
+      top: -10px;
+    }
+  }
+  .list-number1 {
+    &::before {
+      content: "1";
+      color: #f2f2f2;
+      font-size: 281px;
+      line-height: 1;
+      z-index: -1;
+      position: absolute;
+      bottom: 40px;
+      left: 157px;
+    }
+  }
+
+  .list-number2 {
+    &::before {
+      content: "2";
+      color: #f2f2f2;
+      font-size: 281px;
+      line-height: 1;
+      z-index: -1;
+      position: absolute;
+      bottom: 40px;
+      left: 140px;
+    }
+  }
+  .list-number3 {
+    &::before {
+      content: "3";
+      color: #f2f2f2;
+      font-size: 281px;
+      line-height: 1;
+      z-index: -1;
+      position: absolute;
+      bottom: 40px;
+      left: 140px;
+    }
+  }
+  .list-number4 {
+    &::before {
+      content: "4";
+      color: #f2f2f2;
+      font-size: 281px;
+      line-height: 1;
+      z-index: -1;
+      position: absolute;
+      bottom: 40px;
+      left: 140px;
+    }
+  }
+  .list-description__img {
+    z-index: 2;
+    margin-left: 28px;
+    margin-top: 5px;
+    width: 26px;
+    height: 31px;
+  }
+  .list-description__text {
+    margin-left: 10px;
+    padding-top: 37px;
+    max-width: 250px;
+  }
+
+  .example {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border-top: 2px solid #e6e6e6;
+  }
+  .example__inner {
+    margin: 33px 32px 0 32px;
+  }
+  .example__title {
+    font-size: 60px;
+    line-height: 1;
+    color: #111;
+    padding-bottom: 33px;
+  }
+  .example__text {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #444;
+    margin-right: 20px;
+    padding-bottom: 27px;
+  }
+  .total {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .total__weight {
+    margin-right: 42px;
+  }
+  .total__weight--title {
+    padding: 17px 43px 18px 44px;
+    border: 1px solid #cdcdcd;
+    border-radius: 3px;
+    font-size: 30px;
+    line-height: 1.23;
+    color: #111;
+  }
+  .total__weight--text {
+    text-align: center;
+    position: relative;
     left: 0;
+    bottom: 10px;
+    font-size: 14px;
+    line-height: 1;
+    color: #444;
+    background-color: #fff;
+    margin: 0 20px 0 20px;
+  }
+  .total__spent--title {
+    padding: 17px 23px 18px 23px;
+    border: 1px solid #cdcdcd;
+    border-radius: 3px;
+    font-size: 30px;
+    line-height: 1.23;
+    color: #111;
+  }
+  .total__spent--text {
+    text-align: center;
+    position: relative;
+    left: 0;
+    bottom: 10px;
+    font-size: 14px;
+    line-height: 1;
+    color: #444;
+    background-color: #fff;
+    margin: 0 20px 0 20px;
+  }
+
+  .example__expenses {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    bottom: 80px;
+    right: 40px;
+    text-align: end;
+    padding-top: 0;
+    padding-bottom: 44px;
+    font-size: 20px;
+    line-height: 1;
+    color: #111;
+  }
+
+  .example__img-desk {
+    max-width: 636px;
+    height: 517px;
+    display: block;
+    position: relative;
+    bottom: 250px;
+    left: -180px;
+    margin: 0 auto;
+  }
+  .example__inner-img {
+    position: relative;
+    top: 300px;
+    background: linear-gradient(to right, #f2f2f2 50%, #eaeaea 50%);
+    height: 362px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .scale {
+    display: flex;
+    padding: 235px 0 38px 3px;
+    justify-content: center;
+  }
+  .scale__was,
+  .scale__became {
+    font-size: 20px;
+    line-height: 1;
+    color: #111;
+    border-bottom: 1px solid #dcdcdc;
+    margin-bottom: 6px;
+    z-index: 1;
+  }
+  .scale__was {
+    margin-right: 222px;
+  }
+  .scale__became {
+    margin-left: 222px;
+  }
+  .scale__border {
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    border: 1px solid #cdcdcd;
+    background-color: #ffffff;
+    margin: 0;
+    position: relative;
+    bottom: 5px;
+    position: relative;
+    z-index: 3;
+    &::before {
+      content: '';
+      width: 428px;
+      height: 6px;
+      border-radius: 2.5px;
+      background-color: #dcdcdc;
+      position: absolute;
+      left: -195px;
+      top: 13px;
+      z-index: -1;
+    }
+  }
+  .scale__border--green {
+    text-align: center;
+    width: 8px;
+    height: 8px;
+    background-color: #68b738;
+    border-radius: 50%;
+    margin: 0;
+    position: absolute;
+    top: 38%;
+    left: 38%;
+  }
+
+  .address__dealer {
+    display: flex;
+    justify-content: space-between;
+  }
+  .address__dealer--title {
+    font-size: 20px;
+    line-height: 1.25;
+    color: #111;
+    margin: 69px 159px 62px 71px;
+    text-transform: uppercase;
+    max-width: 154px;
+  }
+  .address__dealer--text {
+    margin: 66px 72px 59px 159px;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #444;
+    max-width: 140px;
+  }
+  .address__map--img {
+    width: 100%;
+  }
+  .address__map {
+    text-align: center;
+    position: relative;
+    &::before {
+      content: url("../img/map-pin.png");
+      position: absolute;
+      width: 55px;
+      height: 53px;
+      top: 48%;
+      left: 45%;
+      z-index: 3;
+      transform: scale(2);
+    }
 
   }
+}
+
+@media only screen and (min-width: 1024px) {
+  body {
+    background: url("../img/index-background-desktop.jpg.png");
+    background-repeat: no-repeat;
+    background-position: left 100% bottom 100%;
+  }
+  .cat-program {
+    display: flex;
+    flex-direction: column;
+    background: none;
+    padding-bottom: 0;
+    max-width: 1200px;
+    padding-top: 100px;
+  }
+  .cat-program__item {
+    padding-top: 29px;
+    padding-bottom: 19px;
+    padding-right: 560px;
+    font-size: 60px;
+    line-height: 1;
+    color: #111;
+  }
+  .cat-program__text {
+    padding-right: 730px;
+    color: #111;
+    font-size: 20px;
+    line-height: 1;
+    padding-bottom: 29px;
+  }
+  .cat-program__btn {
+    font-size: 18px;
+    line-height: 1;
+    padding: 17px 29px 17px 29px;
+    display: flex;
+    justify-content: center;
+    background-color: #68b738;
+    color: #fff;
+    text-transform: uppercase;
+    margin: 0 435px 0 114px;
+    position: relative;
+    bottom: 500px;
+    width: 245px;
+  }
+  .cat-program__img {
+    z-index: -1;
+    width: 609px;
+    height: 509px;
+    margin: 0 auto;
+    padding-top: 0;
+    position: relative;
+    bottom: 250px;
+    left: 50px;
+  }
+
+
+  .slimming__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .slimming {
+    background-color: #f2f2f2;
+    margin: 0 30px 30px 30px;
+    position: relative;
+  }
+  .slimming__title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 30px 0 0 20px;
+  }
+  .slimming__title--text {
+    padding: 35px 90px 0 30px;
+    font-size: 36px;
+    line-height: 1.03;
+    color: #111111;
+  }
+  .slimming__title--img {
+    width: 140px;
+    height: 120px;
+    padding-right: 0;
+  }
+  .slimming__title--img2 {
+    width: 140px;
+    height: 120px;
+    padding-right: 0;
+
+  }
+  .slimming__text {
+    position: absolute;
+    top: 220px;
+    width: 80%;
+    margin: 0 22px 0 52px;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #444;
+    padding-bottom: 0;
+    border-bottom: none;
+  }
+  .slimming__btn {
+    margin: 120px 0 0 52px;
+    padding-bottom: 60px;
+  }
+  .slimming__btn--link {
+    padding-right: 12px;
+    font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1;
+    color: #111;
+    text-transform: uppercase;
+  }
+  .slimming__btn--arrow {
+    width: 24px;
+    height: 11px;
+    margin-bottom: 3px;
+  }
+
+
+  .example {
+    display: flex;
+    flex-direction: row;
+    background-color: inherit;
+    border-top: none;
+  }
+  .example__inner {
+    margin: 0 auto;
+    position: relative;
+    max-width: 1024px;
+    margin-bottom: 30px;
+  }
+  .example__title {
+    font-size: 60px;
+    line-height: 1;
+    color: #111;
+    padding-bottom: 133px;
+    padding-top: 33px;
+    padding-left: 33px;
+  }
+  .example__text {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #444;
+    margin-right: 0;
+    max-width: 50%;
+    padding-bottom: 27px;
+    padding-left: 33px;
+  }
+  .total {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 33px;
+    padding-top: 40px;
+  }
+  .total__weight {
+    margin-right: 42px;
+  }
+  .total__weight--title {
+    padding: 17px 43px 18px 44px;
+    border: 1px solid #cdcdcd;
+    border-radius: 3px;
+    font-size: 30px;
+    line-height: 1.23;
+    color: #111;
+  }
+  .total__weight--text {
+    text-align: center;
+    position: relative;
+    left: 0;
+    bottom: 10px;
+    font-size: 14px;
+    line-height: 1;
+    color: #444;
+    background-color: #f2f2f2;
+    margin: 0 20px 0 20px;
+  }
+  .total__spent--title {
+    padding: 17px 23px 18px 23px;
+    border: 1px solid #cdcdcd;
+    border-radius: 3px;
+    font-size: 30px;
+    line-height: 1.23;
+    color: #111;
+  }
+  .total__spent--text {
+    text-align: center;
+    position: relative;
+    left: 0;
+    bottom: 10px;
+    font-size: 14px;
+    line-height: 1;
+    color: #444;
+    background-color: #f2f2f2;
+    margin: 0 20px 0 20px;
+  }
+
+  .example__expenses {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    position: relative;
+    top: 20px;
+    bottom: 0;
+    right: 0;
+    left: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
+    font-size: 20px;
+    line-height: 1;
+    color: #111;
+  }
+  .example__expenses--price {
+    margin-left: 30px;
+  }
+
+  .example__img-desk {
+    max-width: 1024px;
+    height: 517px;
+    display: block;
+    position: relative;
+    bottom: 150px;
+    right: 0;
+    left: 25px;
+    margin: 0;
+  }
+  .example__inner-img {
+    position: absolute;
+    top: 100px;
+    bottom: 0;
+    background: linear-gradient(to right, #f2f2f2 70%, #eaeaea 30%);
+    height: 510px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    width: 100%;
+    z-index: -1;
+  }
+
+  .scale {
+    display: flex;
+    padding: 0 33px 0 0;
+    left: 9px;
+    position: relative;
+    bottom: 0;
+    justify-content: flex-end;
+  }
+  .scale__was,
+  .scale__became {
+    font-size: 20px;
+    line-height: 1;
+    color: #111;
+    border-bottom: 1px solid #dcdcdc;
+    margin-bottom: 6px;
+    z-index: 1;
+  }
+  .scale__was {
+    margin-right: 222px;
+  }
+  .scale__became {
+    margin-left: 222px;
+  }
+  .scale__border {
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    border: 1px solid #cdcdcd;
+    background-color: #ffffff;
+    margin: 0;
+    position: relative;
+    bottom: 5px;
+    position: relative;
+    z-index: 3;
+    &::before {
+      content: '';
+      width: 428px;
+      height: 6px;
+      border-radius: 2.5px;
+      background-color: #dcdcdc;
+      position: absolute;
+      left: -195px;
+      top: 13px;
+      z-index: -1;
+    }
+  }
+  .scale__border--green {
+    text-align: center;
+    width: 8px;
+    height: 8px;
+    background-color: #68b738;
+    border-radius: 50%;
+    margin: 0;
+    position: absolute;
+    top: 38%;
+    left: 38%;
+  }
+
+  .address {
+    position: relative;
+  }
+
+  .address__dealer {
+    display: flex;
+    justify-content: flex-start;
+    position: absolute;
+    top: 95px;
+    left: 90px;
+    z-index: 1;
+    background-color: #fff;
+  }
+  .address__dealer--title {
+    font-size: 20px;
+    line-height: 1.25;
+    color: #111;
+    margin: 69px 95px 62px 76px;
+    text-transform: uppercase;
+    max-width: 154px;
+  }
+  .address__dealer--text {
+    margin: 66px 90px 59px 0;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #444;
+    max-width: 140px;
+  }
+  .address__map--img {
+    width: 100%;
+    height: 400px;
+  }
+  .address__map {
+    text-align: center;
+    position: relative;
+    &::before {
+      content: url("../img/map-pin.png");
+      position: absolute;
+      width: 55px;
+      height: 53px;
+      top: 38%;
+      left: 70%;
+      z-index: 3;
+      transform: scale(2);
+    }
+
+  }
+
+
+
+
+
+
 }
