--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -58,6 +58,41 @@
 }
 
 @media only screen and (min-width: 1024px) {
+  .menu {
+    margin-top: 10px;
+    margin-left: 0;
+    display: flex;
+    min-width: 768px;
+    max-width: 1200px;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .menu__list {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+  }
+  .item__link {
+    display: flex;
+    font-family: 'Oswald-Regular',sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    position: relative;
+    margin: 0;
+
+  }
+
+  .item-active {
+    border-bottom: 2px solid #fff;
+
+  }
+  .item {
+    padding-bottom: 0px;
+    padding-top: 0px;
+    border-top: none;
+    margin-left: 30px;
+  }
 
 
 }
