--- a/source/sass/blocks/main-catalog.scss
+++ b/source/sass/blocks/main-catalog.scss
@@ -169,3 +169,70 @@
   text-align: center;
   color: #fff;
 }
+
+@media only screen and (min-width: 768px) {
+  .product__title {
+    font-size: 60px;
+    line-height: 1;
+    color: #111;
+    text-align: left;
+    padding: 31px 0 35px 0;
+    width: 100%;
+  }
+  .product {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 30px 0 30px;
+  }
+  .product__inner {
+    display: flex;
+    flex-direction: column;
+    height: 431px;
+    border: none;
+    background: linear-gradient(to bottom, #fff 20%,#f2f2f2 20%);
+    margin-top: 140px;
+  }
+  .product__box {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+  }
+  .product__box--img {
+    background-color: inherit;
+    text-align: center;
+    padding-bottom: -20px;
+  }
+  .product__btn {
+    text-transform: uppercase;
+    margin: 0 auto;
+    background-color: #68b738;
+    padding: 12px 108px 12px 108px;
+    max-width: 280px;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #fff;
+  }
+  .product-list {
+    list-style: none;
+    padding: 28px 39px 40px 39px;
+  }
+  .product__box--title {
+    padding-top: 165px;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 128px;
+    font-size: 20px;
+    line-height: 1;
+    color: #111;
+  }
+  .product-list__item {
+    font-size: 16px;
+    line-height: 1;
+    color: #444;
+    display: flex;
+    justify-content: space-between;
+  }
+}
