--- a/source/sass/blocks/main-catalog.scss
+++ b/source/sass/blocks/main-catalog.scss
@@ -189,6 +189,7 @@
   .product__inner {
     display: flex;
     flex-direction: column;
+    width: 324px;
     height: 431px;
     border: none;
     background: linear-gradient(to bottom, #fff 20%,#f2f2f2 20%);
@@ -198,13 +199,11 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-
   }
   .product__box--img {
-    background-color: inherit;
     text-align: center;
-    padding-bottom: -20px;
   }
+
   .product__btn {
     text-transform: uppercase;
     margin: 0 auto;
@@ -214,13 +213,15 @@
     font-size: 16px;
     line-height: 1.25;
     color: #fff;
+    display: flex;
+    align-items: flex-end;
   }
   .product-list {
     list-style: none;
     padding: 28px 39px 40px 39px;
   }
   .product__box--title {
-    padding-top: 165px;
+    padding-top: 0;
     text-align: center;
     margin: 0 auto;
     max-width: 128px;
@@ -234,5 +235,56 @@
     color: #444;
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid #cdcdcd;
+    margin-bottom: 3px;
+    padding-bottom: 5px;
   }
+  .more__inner {
+    height: 340px;
+    width: 324px;
+    border: 1px solid #ededed;
+    margin-top: 230px;
+  }
+  .more__box--img {
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 35px;
+  }
+  .more__box--img-plus {
+    width: 60px;
+    height: 60px;
+    fill: #d3d3d3;
+  }
+  .more__box {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .more__box--title {
+    font-size: 20px;
+    line-height: 1;
+    margin: 0 auto;
+    color: #111;
+    padding-bottom: 28px;
+    max-width: 133px;
+  }
+  .more__box--text {
+    font-size: 16px;
+    line-height: 1.33;
+    text-align: center;
+    max-width: 165px;
+    margin: 0 auto;
+    color: #444;
+    padding-bottom: 22px;
+  }
+  .more__box--btn {
+    text-transform: uppercase;
+    margin: 0 auto;
+    background-color: #f2f2f2;
+    padding: 12px 94px 12px 94px;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #444;
+  }
+
 }
