--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -675,7 +675,7 @@
 }
 
 @media only screen and (min-width: 1024px) {
-  body {
+  .main-body {
     background: url("../img/index-background-desktop.jpg.png");
     background-repeat: no-repeat;
     background-position: left 100% bottom 100%;
