--- a/source/sass/blocks/main-catalog.scss
+++ b/source/sass/blocks/main-catalog.scss
@@ -404,7 +404,7 @@
   }
   .present__inner {
     height: 200px;
-    max-width: 1024px;
+    max-width: 768px;
     position: relative;
     padding: 0;
     text-align: center;
@@ -470,7 +470,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    max-width: 80%;
+    max-width: 72%;
     height: 71px;
     border: none;
     border-top: 1px solid #cdcdcd;
@@ -499,15 +499,28 @@
     margin: 0;
   }
 
+  .additional__inner-gen {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 1024px;
+  }
+
   .present__img {
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
+    flex-direction: column;
     z-index: 1;
     padding-bottom: 64px;
     position: absolute;
     top: 65px;
-    left: 100px;
+    left: 65px;
+  }
+  .present__img-svg {
+    width: 55px;
+    height: 60px;
+    fill: #fff;
+    z-index: 1;
+    margin: 0 auto;
   }
   .present__img-bg {
     margin: 0 auto;
@@ -515,7 +528,7 @@
     width: 245px;
     height: 289px;
   }
-  .present__img-bg--tablet {
+  .present__img-bg--mob-desc {
     width: 245px;
     height: 289px;
   }
@@ -524,21 +537,22 @@
     padding-top: 0;
   }
   .present__inner {
-    height: 289px;
+    height: 0;
     max-width: 245px;
     position: relative;
-    padding: 0;
-    text-align: center;
+    padding-left: 10px;
+    top: -287px;
+    left: 380px;
   }
   .present__title {
     max-width: 159px;
     font-size: 16px;
     line-height: 1.25;
-    text-align: start;
     color: #fff;
-    z-index: 1;
-    padding-top: 0;
-    margin-left: 278px;
+    z-index: 2;
+    text-align: center;
+    padding-top: 65px;
+    margin: 0 auto;
   }
 
 }
