--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,5 +6,6 @@
 @import "blocks/footer.scss";
 @import "blocks/main.scss";
 @import "blocks/main-catalog.scss";
+@import "blocks/main-form.scss";
 
 
