--- a/source/sass/blocks/main-form.scss
+++ b/source/sass/blocks/main-form.scss
@@ -23,17 +23,25 @@
   font-size: 16px;
   line-height: 1.13;
   color: #222;
+  margin-top: 24px;
+  padding-left: 5px;
 }
 .form__nutrition--input {
   height: 45px;
   border: 1px solid #cdcdcd;
   padding-left: 16px;
-  width: 90%;
+  flex-grow: 1;
+  margin-left: 15px;
+  margin-top: 14px;
+}
+.form__nutrition-wrap {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
 }
 
 .form__slimming {
   border: 1px solid #ededed;
-  list-style: none;
   margin: 23px 0 31px 0;
   padding: 20px 0 0 20px;
   display: flex;
@@ -72,4 +80,154 @@
   border-radius:50%;
   border: 2px solid #68b738;
   background-color:#68b738;
+}
+
+.contacts__title {
+  font-size: 24px;
+  line-height: 1;
+  color: #111;
+  max-width: 189px;
+  padding-bottom: 30px;
+  position: relative;
+  &::before {
+    content: "";
+    width: 200%;
+    height: 3px;
+    background-color: #68b738;
+    position: absolute;
+    top: 20px;
+    left: 200px;
+  }
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  margin: 0 20px 30px 20px;
+}
+.contacts__wrap {
+  display: flex;
+  flex-direction: row;
+}
+.contacts__wrap--label {
+  font-size: 16px;
+  line-height: 1.13;
+  color: #222;
+  margin-top: 24px;
+
+}
+.contacts__wrap--input {
+  height: 45px;
+  border: 1px solid #cdcdcd;
+  padding-left: 16px;
+  margin-left: 15px;
+  margin-top: 14px;
+  flex-grow: 1;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  margin: 0 20px 30px 20px;
+}
+.comment__label {
+  font-size: 24px;
+  line-height: 1;
+  color: #111;
+  max-width: 189px;
+  padding-bottom: 30px;
+  position: relative;
+  &::before {
+    content: "";
+    width: 200%;
+    height: 3px;
+    background-color: #68b738;
+    position: absolute;
+    top: 15px;
+    left: 150px;
+  }
+}
+.comment__text {
+  width: 100%;
+  height: 150px;
+  border: solid 1px #cdcdcd;
+  font-size: 16px;
+  line-height: 1.13;
+  text-align: center;
+  color: #444;
+  padding-top: 15px;
+}
+
+.application {
+  display: flex;
+  flex-direction: column;
+  margin: 0 20px 0 20px;
+}
+.application__title {
+  font-size: 24px;
+  line-height: 1;
+  color: #111;
+  max-width: 189px;
+  padding-bottom: 30px;
+  position: relative;
+  &::before {
+    content: "";
+    width: 200%;
+    height: 3px;
+    background-color: #68b738;
+    position: absolute;
+    top: 15px;
+    left: 160px;
+  }
+}
+.application__input {
+  display: none;
+}
+.application__label {
+  font-size: 16px;
+  line-height: 1.13;
+  color: #222;
+  position: relative;
+  left: 45px;
+  padding-bottom: 26px;
+  &::before {
+    position:absolute;
+    top:-5px;
+    left:-45px;
+    content: '';
+    width:30px;
+    height:30px;
+    border: 1px solid #cdcdcd;
+  }
+}
+
+.application__input:checked + .application__label::after {
+  display:block;
+  position:absolute;
+  top:-3px;
+  left:-32px;
+  content: 'L';
+  -webkit-transform: scaleX(-1) rotate(-35deg);
+  -ms-transform: scaleX(-1) rotate(-35deg);
+  transform: scaleX(-1) rotate(-35deg);
+  font-size: 22px;
+  color:#68b738;
+}
+.application__btn {
+  padding: 13px 80px 12px 80px;
+  border: 1px solid #68b738;
+  border-radius: 2px;
+  background: #68b738;
+  font-size: 16px;
+  line-height: 1.25;
+  text-align: center;
+  color: #fff;
+}
+.application__text {
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  color: #444;
+  padding-top: 23px;
+  padding-bottom: 34px;
 }
